<resources>
    <string name="app_name">Siq Filmes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siqFilmes">SIQ FILMES</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">VOLTAR</string>
</resources>
